# bootstrapPi1

./: .gitignore  CMakeLists.txt  LICENSE  README.md  global_fit.cpp  test.cpp
bash/: batch.sh  cancel.sh  create_directories.sh  reset.sh  run.sh  run_all.sh  setup.sh
data/raw_files/tBin_0/: dalitz_m3piBin_11_tBin_0.json  dalitz_m3piBin_12_tBin_0.json  dalitz_m3piBin_13_tBin_0.json  dalitz_m3piBin_14_tBin_0.json  dalitz_m3piBin_15_tBin_0.json  dalitz_m3piBin_16_tBin_0.json  dalitz_m3piBin_17_tBin_0.json  dalitz_m3piBin_18_tBin_0.json  dalitz_m3piBin_19_tBin_0.json  dalitz_m3piBin_20_tBin_0.json  dalitz_m3piBin_21_tBin_0.json  dalitz_m3piBin_22_tBin_0.json  dalitz_m3piBin_23_tBin_0.json  dalitz_m3piBin_24_tBin_0.json  dalitz_m3piBin_25_tBin_0.json  dalitz_m3piBin_26_tBin_0.json  dalitz_m3piBin_27_tBin_0.json  dalitz_m3piBin_28_tBin_0.json  dalitz_m3piBin_29_tBin_0.json  dalitz_m3piBin_30_tBin_0.json  dalitz_m3piBin_31_tBin_0.json  dalitz_m3piBin_32_tBin_0.json  dalitz_m3piBin_33_tBin_0.json  dalitz_m3piBin_34_tBin_0.json  dalitz_m3piBin_35_tBin_0.json  dalitz_m3piBin_36_tBin_0.json  dalitz_m3piBin_37_tBin_0.json  dalitz_m3piBin_38_tBin_0.json  dalitz_m3piBin_39_tBin_0.json  dalitz_m3piBin_40_tBin_0.json  dalitz_m3piBin_41_tBin_0.json  dalitz_m3piBin_42_tBin_0.json  dalitz_m3piBin_43_tBin_0.json  dalitz_m3piBin_44_tBin_0.json  dalitz_m3piBin_45_tBin_0.json  dalitz_m3piBin_46_tBin_0.json  dalitz_m3piBin_47_tBin_0.json  dalitz_m3piBin_48_tBin_0.json  dalitz_m3piBin_49_tBin_0.json
data/raw_files/tBin_1/: dalitz_m3piBin_11_tBin_1.json  dalitz_m3piBin_12_tBin_1.json  dalitz_m3piBin_13_tBin_1.json  dalitz_m3piBin_14_tBin_1.json  dalitz_m3piBin_15_tBin_1.json  dalitz_m3piBin_16_tBin_1.json  dalitz_m3piBin_17_tBin_1.json  dalitz_m3piBin_18_tBin_1.json  dalitz_m3piBin_19_tBin_1.json  dalitz_m3piBin_20_tBin_1.json  dalitz_m3piBin_21_tBin_1.json  dalitz_m3piBin_22_tBin_1.json  dalitz_m3piBin_23_tBin_1.json  dalitz_m3piBin_24_tBin_1.json  dalitz_m3piBin_25_tBin_1.json  dalitz_m3piBin_26_tBin_1.json  dalitz_m3piBin_27_tBin_1.json  dalitz_m3piBin_28_tBin_1.json  dalitz_m3piBin_29_tBin_1.json  dalitz_m3piBin_30_tBin_1.json  dalitz_m3piBin_31_tBin_1.json  dalitz_m3piBin_32_tBin_1.json  dalitz_m3piBin_33_tBin_1.json  dalitz_m3piBin_34_tBin_1.json  dalitz_m3piBin_35_tBin_1.json  dalitz_m3piBin_36_tBin_1.json  dalitz_m3piBin_37_tBin_1.json  dalitz_m3piBin_38_tBin_1.json  dalitz_m3piBin_39_tBin_1.json  dalitz_m3piBin_40_tBin_1.json  dalitz_m3piBin_41_tBin_1.json  dalitz_m3piBin_42_tBin_1.json  dalitz_m3piBin_43_tBin_1.json  dalitz_m3piBin_44_tBin_1.json  dalitz_m3piBin_45_tBin_1.json  dalitz_m3piBin_46_tBin_1.json  (+3 more)
root/: calculate_std.C  process.C
src/: global_fit.cpp  pi1_amplitude.hpp  pi1_data.hpp  pi1_fitter.hpp  pi1_isobar.hpp  pi1_utilities.hpp
(+78 files in other folders)
