cmake_minimum_required (VERSION 3.30)
cmake_policy(VERSION 3.30)

project (pi1_bootstrap)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS "-fPIC -O3") 
set(CMAKE_BUILD_TYPE "Release")

# Set output lib and bin locations
set(CMAKE_INSTALL_BINDIR ${CMAKE_CURRENT_SOURCE_DIR}/bin)
set(CMAKE_INSTALL_LIBDIR ${CMAKE_CURRENT_SOURCE_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_INSTALL_BINDIR})

##-----------------------------------------------------------------------
## CERN ROOT

# Make sure we can find ROOT 
execute_process(COMMAND root-config --prefix 
                COMMAND tr -d \\n
                RESULT_VARIABLE RC_RESULT 
                OUTPUT_VARIABLE ROOT_PREFIX)
list(APPEND CMAKE_MODULE_PATH "${ROOT_PREFIX}/share/root/cmake")

# Find ROOT
find_package(ROOT REQUIRED COMPONENTS Core MathMore RIO Rint Hist Gpad Matrix)
if (ROOT_FOUND)
    message("-- Found ROOT: ${ROOT_INCLUDE_DIRS}")
    #---Define useful ROOT functions and macros (e.g. ROOT_GENERATE_DICTIONARY)
    include(${ROOT_USE_FILE})
    list(APPEND CMAKE_PREFIX_PATH $ENV{ROOTSYS}) 
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${ROOT_CXX_FLAGS}")
    include_directories(${ROOT_INCLUDE_DIRS})
else()
    message(SEND_ERROR "-- Root not found!")
endif()

##-----------------------------------------------------------------------
## BOOST C++

set(BOOST_MIN_VERSION 1.68.0) # Need complex Gauss-Kronrod integration
find_package(Boost ${BOOST_MIN_VERSION} REQUIRED)
if (Boost_FOUND)
    message("-- Found Boost: ${Boost_INCLUDE_DIRS}")
    include_directories(${Boost_INCLUDE_DIRS})
else()
    message(SEND_ERROR "-- Boost not found!")
endif()

##-----------------------------------------------------------------------
## Find iterateKT

if (DEFINED ENV{ITERATEKT})
    message("-- Environment variable ITERATEKT set! ($ENV{ITERATEKT})")
    include_directories($ENV{ITERATEKT}/src)
else()
    message(WARNING "-- ITERATEKT environment variable not set!")
endif()

##-----------------------------------------------------------------------
## Build a static version of iterateKT

file(GLOB SRC "$ENV{ITERATEKT}/src/*" )

add_library(PI1 INTERFACE)
target_include_directories(PI1 INTERFACE src/)

add_library(ITERATEKT STATIC ${SRC})
target_link_libraries( ITERATEKT ROOT::Core ROOT::MathMore ROOT::Matrix ROOT::RIO ROOT::Rint ROOT::Gpad ROOT::Hist)
target_link_libraries( ITERATEKT ${Boost_LIBRARIES} )
target_link_libraries( ITERATEKT PI1)


install( TARGETS ITERATEKT
         LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
         ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR} )

add_executable( do_fit "src/global_fit.cpp" )
target_link_libraries( do_fit ITERATEKT )
target_link_libraries( do_fit PI1)
